--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cyf-super/utils",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "description": "个人工具库",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -18,13 +18,21 @@
     "build": "rollup -c",
     "test": "vitest"
   },
-  "keywords": [],
+  "keywords": [
+    "util",
+    "es6",
+    "modules"
+  ],
   "author": "cyf-super",
   "type": "module",
   "license": "MIT",
   "files": [
     "dist"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cyf-super/utils"
+  },
   "private": false,
   "devDependencies": {
     "@babel/core": "^7.22.5",
@@ -34,7 +42,12 @@
     "@rollup/plugin-terser": "^0.4.3",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^20.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.44.0",
+    "eslint-config-standard-with-typescript": "^36.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
     "prettier": "^2.8.8",
     "rollup": "^3.26.0",
     "rollup-plugin-dts": "^5.3.0",
