--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@rollup/plugin-terser": "^0.4.3",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^20.3.3",
+    "@types/sjcl": "^1.0.30",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.44.0",
     "eslint-config-standard-with-typescript": "^36.0.0",
@@ -58,6 +59,6 @@
     "vitest": "^0.32.4"
   },
   "dependencies": {
-    "crypto-js": "^4.1.1"
+    "sjcl": "^1.0.8"
   }
 }
