--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cyf-super/utils",
-  "version": "0.1.1",
+  "version": "0.1.4",
   "description": "个人工具库",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
@@ -13,18 +13,18 @@
     }
   },
   "scripts": {
-    "lint": "eslint --ext .js,.ts ./",
+    "lint": "eslint --ext .js,.ts ./ --fix",
     "dev": "rollup -c --watch",
     "build": "rollup -c",
     "test": "vitest"
   },
+  "type": "module",
   "keywords": [
     "util",
     "es6",
     "modules"
   ],
   "author": "cyf-super",
-  "type": "module",
   "license": "MIT",
   "files": [
     "dist"
@@ -36,22 +36,30 @@
   "private": false,
   "devDependencies": {
     "@babel/core": "^7.22.5",
+    "@cyf-super/eslint-config": "^0.0.1",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-json": "^6.0.0",
     "@rollup/plugin-node-resolve": "^15.1.0",
     "@rollup/plugin-terser": "^0.4.3",
+    "@taiyuuki/eslint-config-ts": "^0.0.9",
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^20.3.3",
+    "@types/prettier": "^2.7.3",
     "@types/sjcl": "^1.0.30",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.44.0",
-    "eslint-config-standard-with-typescript": "^36.0.0",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "prettier": "^2.8.8",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jshow": "^1.0.5",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.0.0",
     "rollup": "^3.26.0",
     "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-import-export": "^0.0.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-typescript2": "^0.35.0",
